<?xml version="1.0"?>
<package >
  <name>universal_robot</name>
  <version>1.7.0</version>
  <description>The gnss package</description>
  <maintainer email="song.li@robooster.com.cn">song li</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

<build_depend>roscpp</build_depend>
<build_depend>tf</build_depend>
<build_depend>nav_msgs</build_depend>


<run_depend>roscpp</run_depend>
<run_depend>tf</run_depend>
<run_depend>nav_msgs</run_depend>


<export>
</export>
</package>

